<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mark_detail_view" >

        <TableLayout
            android:id="@+id/detail_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/halfgap"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_date" />

                <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_subject" />

                <TextView
                    android:id="@+id/detail_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_mark" />

                <TextView
                    android:id="@+id/detail_mark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_type" />

                <TextView
                    android:id="@+id/detail_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_teacher" />

                <TextView
                    android:id="@+id/detail_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text_t"
                    android:text="@string/detail_t_note" />

                <TextView
                    android:id="@+id/detail_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/detail_table_row_text" />

            </TableRow>

        </TableLayout>
        
</ScrollView>
